[package]
name = "linkers"
version = "0.1.0"
edition = "2021"
description = "A simple ELF linker written in Rust"

[dependencies]
object = "0.30.0"
memmap = "0.5.0"
thiserror = "1.0"
env_logger = "0.9.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0"
predicates = "2.1"

[[example]]
name = "simple_linking"
path = "examples/simple_linking.rs"





